apply plugin: 'java'

group = pluginGroup
version = pluginVersion

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
    jcenter()
    maven {
        name = 'spigotmc-repo'
        url = 'https://hub.spigotmc.org/nexus/content/groups/public/'
    }
    maven {
        name = 'sonatype'
        url = 'https://oss.sonatype.org/content/groups/public/'
    }
    maven { url = 'https://jitpack.io' }
}

dependencies {
    compile 'org.spigotmc:spigot-api:1.8.8-R0.1-SNAPSHOT'

    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile 'com.github.knightzmc:MockBukkit:13c13d21551f47a9dc8c4bde89d7681c45fe7fae'
    testImplementation 'org.jline:jline:3.11.0'
    testCompile "org.mockito:mockito-core:2.26.0"

    
}